--- a/package.json
+++ b/package.json
@@ -2,11 +2,10 @@
   "name": "nestjs-mongodb-crud",
   "version": "0.0.1",
   "description": "",
-  "author": "Niranjan",
+  "author": "Shreyas",
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
-    "prebuild": "rimraf dist",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
