--- a/package.json
+++ b/package.json
@@ -2,16 +2,17 @@
   "name": "nestjs-mongodb-crud",
   "version": "0.0.1",
   "description": "",
-  "author": "Shreyas",
+  "author": "Niranjan",
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
-    "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
+    "prebuild": "rimraf dist",
+    "build": "nest build",
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
+    "start:prod": "node dist/main.js",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -21,9 +22,8 @@
   },
   "dependencies": {
     "@nestjs/common": "^8.0.0",
-    "@nestjs/config": "^3.2.2",
     "@nestjs/core": "^8.0.0",
-    "@nestjs/mapped-types": "^1.2.2",
+    "@nestjs/mapped-types": "^1.0.1",
     "@nestjs/mongoose": "^9.0.3",
     "@nestjs/platform-express": "^8.0.0",
     "class-transformer": "^0.5.1",
