--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT=3000
 MONGODB_URL='mongodb+srv://farmkalDB:farmkaldb123@cluster0.md9tqb0.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0'
+JWT_SECRET='ALPHABETAGAMA'
