--- a/package.json
+++ b/package.json
@@ -25,12 +25,20 @@
     "@nestjs/common": "^8.0.0",
     "@nestjs/config": "^3.2.2",
     "@nestjs/core": "^8.0.0",
+    "@nestjs/jwt": "^10.2.0",
     "@nestjs/mapped-types": "^1.0.1",
     "@nestjs/mongoose": "^9.0.3",
+    "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^8.0.0",
+    "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "fast-two-sms": "^3.0.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^6.2.9",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0"
