--- a/package.json
+++ b/package.json
@@ -24,30 +24,33 @@
   "dependencies": {
     "@nestjs/common": "^8.0.0",
     "@nestjs/config": "^3.2.2",
-    "@nestjs/core": "^8.0.0",
+    "@nestjs/core": "^8.4.7",
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/mapped-types": "^1.0.1",
     "@nestjs/mongoose": "^9.0.3",
     "@nestjs/passport": "^10.0.3",
-    "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/platform-express": "^8.4.7",
+    "@types/multer": "^1.4.11",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "fast-two-sms": "^3.0.0",
+    "firebase-admin": "^12.1.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^6.2.9",
+    "multer": "^1.4.5-lts.1",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
-    "reflect-metadata": "^0.1.13",
+    "reflect-metadata": "^0.1.14",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.8.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
-    "@types/express": "^4.17.13",
+    "@types/express": "^4.17.21",
     "@types/jest": "^27.0.1",
     "@types/node": "^16.0.0",
     "@types/supertest": "^2.0.11",
