--- a/.gitignore
+++ b/.gitignore
@@ -21,8 +21,8 @@ lerna-debug.log*
 Api's.txt
 dbSchema.txt
 first_2_weeks.txt
-.env
-.env.test
+# .env
+# .env.test
 # IDEs and editors
 /.idea
 .project
