--- a/vercel.json
+++ b/vercel.json
@@ -10,8 +10,7 @@
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "dist/main.js",
-      "methods": ["GET", "POST", "PUT", "DELETE"]
+      "dest": "dist/main.js"
     }
   ]
 }
