--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "@nestjs/mongoose": "^9.2.2",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^8.4.7",
+    "@nestjs/platform-socket.io": "^10.3.9",
+    "@nestjs/websockets": "^10.3.9",
     "@types/multer": "^1.4.11",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
