--- a/vercel.json
+++ b/vercel.json
@@ -6,6 +6,8 @@
       "use": "@vercel/node"
     }
   ],
+  "installCommand": "npm install --legacy-peer-deps",
+  "buildCommand": "npm run build",
   "routes": [
     {
       "src": "/(.*)",
