--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@huggingface/inference": "^2.7.0",
     "@nestjs/common": "^8.0.0",
     "@nestjs/config": "^3.2.2",
     "@nestjs/core": "^8.4.7",
@@ -31,15 +32,19 @@
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^8.4.7",
     "@types/multer": "^1.4.11",
+    "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "fast-two-sms": "^3.0.0",
     "firebase-admin": "^12.1.1",
+    "groq-sdk": "^0.5.0",
     "is-ci": "^3.0.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^6.13.0",
     "multer": "^1.4.5-lts.1",
+    "node-fetch": "^3.3.2",
+    "openai": "^4.52.2",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
