--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@nestjs/mongoose": "^9.2.2",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^8.4.7",
+    "@nestjs/websockets": "^10.3.10",
     "@types/multer": "^1.4.11",
     "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
