--- a/vercel.json
+++ b/vercel.json
@@ -6,7 +6,7 @@
       "use": "@vercel/node"
     }
   ],
-  "installCommand": "npm install --legacy-peer-deps",
+  "installCommand": "npm install ---legacy-peer-deps",
   "buildCommand": "npm run build",
   "routes": [
     {
