--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@nestjs/mongoose": "^9.2.2",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^8.4.7",
+    "@nestjs/platform-socket.io": "^8.4.7",
     "@nestjs/websockets": "^8.4.7",
     "@types/multer": "^1.4.11",
     "axios": "^1.7.2",
@@ -51,7 +52,8 @@
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.14",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "socket.io": "^4.1.2"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
