--- a/package.json
+++ b/package.json
@@ -34,10 +34,12 @@
     "@nestjs/platform-socket.io": "^8.4.7",
     "@nestjs/websockets": "^8.4.7",
     "@types/multer": "^1.4.11",
+    "ably": "^2.3.0",
     "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "ejs": "^3.1.10",
     "fast-two-sms": "^3.0.0",
     "firebase-admin": "^12.1.1",
     "groq-sdk": "^0.5.0",
